--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "postinstall": "tsc --project ./tsconfig.prod.json",
+    "build": "yarn postinstall",
     "dev": "nodemon --config nodemon.json src/index.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts",
     "gen:key": "node -e \"console.log(require('crypto').randomBytes(256).toString('base64'));\""
@@ -23,17 +24,20 @@
     "@types/node": "^17.0.5",
     "@types/pino": "^7.0.5",
     "nodemon": "^2.0.15",
+    "pino-pretty": "^7.3.0",
     "ts-node": "^10.4.0",
     "tsc": "^2.0.3",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/pino-http": "^5.8.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "pino": "^7.6.2"
+    "pino": "^7.6.2",
+    "pino-http": "^6.5.0"
   },
   "engines": {
     "node": "16.13.0",
